--- a/blogfriday(react)/components/pay/PaymentCompletePage.css
+++ b/blogfriday(react)/components/pay/PaymentCompletePage.css
@@ -1,5 +1,5 @@
 /* 전체 페이지 스타일 */
-body {
+/* body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
@@ -7,7 +7,7 @@ body {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-}
+} */
 
 /* 결제 완료 컨테이너 스타일 */
 .payment-complete-container {
