--- a/blogfriday(react)/components/product/Productlist.css
+++ b/blogfriday(react)/components/product/Productlist.css
@@ -1,5 +1,5 @@
 .seller_list_body {
-  width: 700px;
+  width: 100%;
   height: 100px;
   display: flex;
   flex-direction: column;
@@ -52,6 +52,23 @@
   margin-top: 10px;
 }
 
+.seller_menu_button_m {
+  width: 100%;
+  height: 70px;
+  /* background-color: rgb(76, 128, 177); */
+  font-weight: bolder;
+  color: black; /* 글자색 */
+  border-bottom: 1px solid black; /* 테두리 없음 */
+  border-radius: 4px; /* 모서리 둥글게 */
+  cursor: pointer; /* 마우스 오버시 커서 변경 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 10px;
+  background-color: rgb(192, 192, 192);
+}
+
 .seller_menu_button_c {
   width: 100%;
   height: 70px;
@@ -68,15 +85,24 @@
   margin-top: 10px;
   background-color: rgb(192, 192, 192);
 }
+
+.seller_menu_box {
+  width: 100%;
+  display: flex;
+
+  align-items: center;
+  /* background-color: aquamarine; */
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 10px;
+}
 .seller_menu_button:hover {
   background-color: rgb(192, 192, 192);
 }
 
 /* 여기서 부터 바디 */
 .seller_body {
-  width: 90%;
+  width: 100%;
   height: 80%;
-  display: flex;
 }
 
 .seller_img {
@@ -85,41 +111,34 @@
 }
 
 .seller_list_body_listm {
-  width: 950px;
+  width: 100%;
   height: 70px;
   font-size: 20px;
   border: 2px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 5px;
 }
 
 .seller_list_body_list {
-  width: 950px;
+  width: 100%;
   height: 70px;
-  font-size: 20px;
+  font-size: 15px;
   border: 2px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
-
-  margin-left: 5px;
 }
 
 .seller_list_body_listo {
-  width: 950px;
+  width: 100%;
   height: 70px;
-  font-size: 20px;
+  font-size: 15px;
   border: 2px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: rgb(236, 236, 237);
-
-  margin-left: 5px;
 }
 
 .slbl_checkbox {
@@ -130,7 +149,7 @@
 .slbl_c {
   width: 70px;
   height: 70px;
-  border: 1px solid black;
+  border-top: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -138,7 +157,7 @@
 .slbl_b {
   width: 100px;
   height: 70px;
-  border: 1px solid black;
+  border-top: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -146,7 +165,7 @@
 .slbl_ct {
   width: 130px;
   height: 70px;
-  border: 1px solid black;
+  border-top: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -154,7 +173,7 @@
 .slbl_n {
   width: 240px;
   height: 70px;
-  border: 1px solid black;
+  border-top: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -162,7 +181,7 @@
 .slbl_a {
   width: 100px;
   height: 70px;
-  border: 1px solid black;
+  border-top: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -170,7 +189,7 @@
 .slbl_p {
   width: 100px;
   height: 70px;
-  border: 1px solid black;
+  border-top: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -178,15 +197,19 @@
 .slbl_l {
   width: 80px;
   height: 70px;
-  border: 1px solid black;
+  border-top: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+}
+.slbl_l:hover {
+  text-decoration: underline;
 }
 .slbl_d {
   width: 130px;
   height: 70px;
-  border: 1px solid black;
+  border-top: 1px solid black;
   display: flex;
   justify-content: center;
   align-items: center;
