--- a/blogfriday(react)/components/product/Productsave.css
+++ b/blogfriday(react)/components/product/Productsave.css
@@ -4,28 +4,23 @@
   background-color: brown;
 }
 
-.seller_menu_box {
-  width: 150px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  /* background-color: aquamarine; */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
 .save {
-  width: 900px;
+  width: 100%;
   height: 1800px;
   /* background-color: antiquewhite; */
   border: 2px solid rgb(192, 192, 192);
-  margin-left: 30px;
 }
 .save_t {
-  width: 400px;
+  width: 50%;
   height: 140px;
   font-size: 18px;
 }
 
+.save_inputbox_input {
+  width: 100%;
+  height: 10px;
+  margin: 2px;
+}
 .productcontentbox_is {
   width: 1200px;
   height: 1400px;
@@ -37,21 +32,24 @@
 
 .saveinput {
   width: 100%;
-  height: 250px;
+  height: 300px;
   display: flex;
   margin-top: 40px;
-  border-bottom: 1px solid rgb(192, 192, 192);
 }
+
 .category_box {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr); /* 2열 */
-  grid-template-rows: repeat(3, 1fr); /* 3행 */
-  gap: 10px; /* 버튼 사이의 간격 */
-  width: 260px;
-  height: 230px;
-  margin-left: 50px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  width: 25%;
+  height: 270px;
+
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   padding: 10px; /* 내부 여백 추가 */
+}
+.save_form_box {
+  width: 70%;
+  height: 270px;
 }
 
 .category_box button {
@@ -60,7 +58,7 @@
   border: none; /* 테두리 없음 */
   border-radius: 4px; /* 모서리 둥글게 */
   cursor: pointer; /* 커서 변경 */
-  font-size: 16px; /* 글꼴 크기 */
+  font-size: 13px; /* 글꼴 크기 */
   padding: 10px 20px; /* 패딩 */
 }
 .category_box button.active {
@@ -68,34 +66,38 @@
   color: white; /* Active button text color */
 }
 .savecontextinputbox {
-  margin-left: 40px;
-  width: 500px;
+  display: flex;
+  width: 100%;
 }
 .save_inputbody {
   display: flex;
-  width: 30%; /* 너비를 100%로 설정 */
+  width: 70%; /* 너비를 100%로 설정 */
 }
 .save_inputbox {
   display: flex;
   flex-direction: column; /* Flexbox 방향을 세로로 설정 */
-  width: 150px; /* 너비를 60%로 설정 */
-  margin-left: 90px;
+  width: 50%; /* 너비를 60%로 설정 */
 }
-.save_inputbox_input {
-  width: 230px;
-  height: 20px;
-  margin: 2px;
+.save_file {
+  width: 80%;
+  height: 40px;
+  display: flex;
+  justify-content: center; /* 수평 중앙 정렬 */
+  align-items: center;
 }
 
 .save_inputimg {
   display: flex;
 }
 .save_inputimg_d {
-  margin-left: 80px;
 }
-
+.save_input_text {
+  width: 100%;
+  display: flex;
+  font-size: 17px;
+  font-weight: bold;
+}
 .savesubmit_btn {
-  margin-left: 390px;
 }
 .savepreview {
   width: 100%;
