--- a/blogfriday(react)/components/user/MyPage.css
+++ b/blogfriday(react)/components/user/MyPage.css
@@ -53,7 +53,38 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   margin-top: 10px;
 }
-
+.seller_menu_button_1 {
+  width: 100%;
+  height: 70px;
+  /* background-color: rgb(76, 128, 177); */
+  font-weight: bolder;
+  color: black; /* 글자색 */
+  border-bottom: 1px solid black; /* 테두리 없음 */
+  border-radius: 4px; /* 모서리 둥글게 */
+  cursor: pointer; /* 마우스 오버시 커서 변경 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 10px;
+  background-color: rgb(192, 192, 192);
+}
+.seller_menu_button_2 {
+  width: 100%;
+  height: 70px;
+  /* background-color: rgb(76, 128, 177); */
+  font-weight: bolder;
+  color: black; /* 글자색 */
+  border-bottom: 1px solid black; /* 테두리 없음 */
+  border-radius: 4px; /* 모서리 둥글게 */
+  cursor: pointer; /* 마우스 오버시 커서 변경 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 10px;
+  background-color: rgb(192, 192, 192);
+}
 .mypage_menu_button_c {
   width: 100%;
   height: 70px;
